--- a/style.css
+++ b/style.css
@@ -505,6 +505,76 @@ header .flex .icon #menu-bars {
   margin-top: 0;
 }
 
+/* Footer Section */
+.footer .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 1.5rem;
+}
+
+.footer .box-container .box h3 {
+  padding: 0.5rem 0;
+  font-size: 2.5rem;
+  color: var(--black);
+  margin-bottom: 1.5rem;
+}
+
+.footer .box-container .box a {
+  display: block;
+  padding: 0.7rem 0;
+  font-size: 1.6rem;
+  color: var(--light-color);
+}
+
+.footer .box-container .box a:hover {
+  color: var(--green);
+  text-decoration: underline;
+}
+
+.footer .credit {
+  text-align: center;
+  font-size: 2rem;
+  border-top: 0.1rem solid rgba(0, 0, 0, 0.1);
+  color: var(--black);
+  padding: 0.5rem;
+  padding-top: 3rem;
+  margin-top: 3rem;
+}
+
+.footer .credit span {
+  color: var(--light-purple);
+}
+
+.footer .credit span:hover {
+  color: var(--green);
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+/* Loader Section */
+.loader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 10000;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.loader-container img {
+  width: 35rem;
+}
+
+.loader-container.fade-out {
+  top: -110%;
+  opacity: 0;
+}
+
 /* Media Query */
 @media (max-width: 768px) {
   header .flex .icon #menu-bars {
@@ -530,6 +600,19 @@ header .flex .icon #menu-bars {
     margin: 1rem;
     font-size: 2rem;
     background: #eee;
+  }
+
+  #search-form #search-box {
+    width: 90%;
+    margin: 0 1rem;
+  }
+
+  .home .home-slider .slide {
+    margin-bottom: 4rem;
+  }
+
+  .home .home-slider .slide .content h3 {
+    font-size: 4.5rem;
   }
 }
 
@@ -583,4 +666,19 @@ header .flex .icon #menu-bars {
   top: 2rem;
   right: 3rem;
   font-size: 5rem;
+}
+
+@media (max-width: 450px) {
+  html {
+    font-size: 50%;
+  }
+
+  .dishes .box-container .box img {
+    height: auto;
+    width: 100%;
+  }
+
+  .order form .inputBox .input {
+    width: 100%;
+  }
 }
